[tool.poetry]
name = "testzone"
version = "0.1.0"
description = ""
authors = ["User <johnsena322@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskiq = "^0.11.7"
pydantic = "^2.9.2"
seleniumbase = "^4.31.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
